--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 <body>
-<ul>
-<li> Classifications
+
+  <h2> Classifications </h2>
   <li>/v1/vocabularies/classifications/{id}
 Get classification content by classification id</li>
 <li>
@@ -15,7 +15,6 @@ Get Classification content by Classification name</li>
 /v1/vocabularies/materials/all
 Get a complete list of materials in SESAR system</li>
 </li>
-</ul>
 </div>
 </body>
 </html>
