--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <body>
 
   <h2> Classifications </h2>
-  <li>/v1/vocabularies/classifications/{id}
-Get classification content by classification id</li>
-<li>
-/v1/vocabularies/classifications/all
-Get a complete list of classifications</li>
-<li>
-/v1/vocabularies/classifications/name/{name}
-Get Classification content by Classification name</li>
-<li>
-/v1/vocabularies/materials/all
-Get a complete list of materials in SESAR system</li>
-</li>
-</div>
+  <li>/v1/vocabularies/classifications/{id} Get classification content by classification id</li>
+  <li>/v1/vocabularies/classifications/all Get a complete list of classifications</li>
+  <li> /v1/vocabularies/classifications/name/{name} Get Classification content by Classification name</li>
+  <li> /v1/vocabularies/materials/all Get a complete list of materials in SESAR system</li>
+
+  <h2>Country</h2>
+  Countries from SESAR
+  <li>/v1/vocabularies/countries/{id} Get country content by country id</li>
+  <li>/v1/vocabularies/countries/all Get a complete list of Countries from SESAR </li>
+  <li> /v1/vocabularies/countries/name/{name} Get country content by country name </li>
+  
 </body>
 </html>
